using UnityEngine;

public class ItemHealth : ItemEffect
{
    public override void ApplyEffect(PlayerController player) { }
} 